--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Config/rextendr/version: 0.3.1
+URL: https://github.com/simonpcouch/rinfa
+BugReports: https://github.com/simonpcouch/rinfa/issues
