--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Config/rextendr/version: 0.3.1
+Config/rextendr/version: 0.3.1.9000
 URL: https://github.com/simonpcouch/rinfa
 BugReports: https://github.com/simonpcouch/rinfa/issues
+SystemRequirements: Cargo (Rust's package manager), rustc
