--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -4,13 +4,14 @@ version = '0.1.0'
 edition = '2021'
 
 [lib]
-crate-type = [ 'staticlib' ]
+crate-type = ['staticlib']
 name = 'rinfa'
 
 [dependencies]
-extendr-api = '0.4'
+# lots of changes since 0.4.0
+extendr-api = { git = "https://github.com/extendr/extendr" }
 linfa = '*'
 linfa-linear = '*'
 linfa-datasets = { version = "0.7", features = ["diabetes"] }
-ndarray = { version = "0.13"}
+ndarray = { version = "0.13" }
 ndarray-csv = "0.4"
