--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: rinfa
 Title: Rust bindings for tidymodels
 Version: 0.0.0.9000
-Authors@R: 
-    person("Simon", "Couch", , "simon.couch@posit.co", role = c("aut", "cre"))
+Authors@R: c(
+  person("Simon", "Couch", , "simon.couch@posit.co", role = c("aut", "cre")),
+  person("Josiah", "Parry", , "josiah.parry@gmail.com", role = "aut",
+         comment = c(ORCID = "0000-0001-9910-865X"))
+  )
 Description: Rust bindings for tidymodels
 License: MIT + file LICENSE
 Suggests: 
