--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -13,5 +13,5 @@ extendr-api = { git = "https://github.com/extendr/extendr" }
 linfa = '*'
 linfa-linear = '*'
 linfa-datasets = { version = "0.7", features = ["diabetes"] }
-ndarray = { version = "0.13" }
+ndarray = "=0.15.6"
 ndarray-csv = "0.4"
