add minimal support for `trees` module
* decision trees via `linfa-trees`
* implements structure for classification
* specs out passing hyperparams to linfa

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -12,6 +12,7 @@ name = 'rinfa'
 extendr-api = { git = "https://github.com/extendr/extendr" }
 linfa = '*'
 linfa-linear = '*'
+linfa-trees = "0.7.0"
 linfa-datasets = { version = "0.7", features = ["diabetes"] }
 ndarray = "=0.15.6"
 ndarray-csv = "0.4"
