implement logistic regression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(format,linfa_fit)
 S3method(predict,linfa_decision_tree)
 S3method(predict,linfa_linear_reg)
+S3method(predict,linfa_logistic_reg)
 S3method(print,linfa_fit)
 export(linfa_decision_tree)
 export(linfa_linear_reg)
+export(linfa_logistic_reg)
 useDynLib(rinfa, .registration = TRUE)
