implement multinomial regression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ S3method(format,linfa_fit)
 S3method(predict,linfa_decision_tree)
 S3method(predict,linfa_linear_reg)
 S3method(predict,linfa_logistic_reg)
+S3method(predict,linfa_multinom_reg)
 S3method(print,linfa_fit)
 export(linfa_decision_tree)
 export(linfa_linear_reg)
 export(linfa_logistic_reg)
+export(linfa_multinom_reg)
 useDynLib(rinfa, .registration = TRUE)
