--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ S3method(predict,linfa_decision_tree)
 S3method(predict,linfa_linear_reg)
 S3method(predict,linfa_logistic_reg)
 S3method(predict,linfa_multinom_reg)
+S3method(predict,linfa_naive_Bayes)
 S3method(print,linfa_fit)
 export(linfa_decision_tree)
 export(linfa_linear_reg)
 export(linfa_logistic_reg)
 export(linfa_multinom_reg)
+export(linfa_naive_Bayes)
 useDynLib(rinfa, .registration = TRUE)
