--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ S3method(predict,linfa_linear_reg)
 S3method(predict,linfa_logistic_reg)
 S3method(predict,linfa_multinom_reg)
 S3method(predict,linfa_naive_Bayes)
+S3method(predict,linfa_svm_linear)
 S3method(print,linfa_fit)
 export(linfa_decision_tree)
 export(linfa_linear_reg)
 export(linfa_logistic_reg)
 export(linfa_multinom_reg)
 export(linfa_naive_Bayes)
+export(linfa_svm_linear)
 useDynLib(rinfa, .registration = TRUE)
