support parsnip interface for `linear_reg()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,6 @@ export(linfa_logistic_reg)
 export(linfa_multinom_reg)
 export(linfa_naive_Bayes)
 export(linfa_svm_linear)
+export(predict)
+importFrom(stats,predict)
 useDynLib(rinfa, .registration = TRUE)
