--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,12 @@ Authors@R: c(
   )
 Description: Rust bindings for tidymodels
 License: MIT + file LICENSE
+Depends:
+    parsnip
 Imports: 
     cli,
     rlang (>= 1.1.0)
 Suggests: 
-    parsnip,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
