correct rlang import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(linfa_multinom_reg)
 export(linfa_naive_Bayes)
 export(linfa_svm_linear)
 export(predict)
+import(rlang)
 importFrom(stats,predict)
 useDynLib(rinfa, .registration = TRUE)
