document how internal functions are situated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,12 @@ S3method(predict,linfa_multinom_reg)
 S3method(predict,linfa_naive_Bayes)
 S3method(predict,linfa_svm_linear)
 S3method(print,linfa_fit)
-export(linfa_decision_tree)
-export(linfa_linear_reg)
-export(linfa_logistic_reg)
-export(linfa_multinom_reg)
-export(linfa_naive_Bayes)
-export(linfa_svm_linear)
+export(.linfa_decision_tree)
+export(.linfa_linear_reg)
+export(.linfa_logistic_reg)
+export(.linfa_multinom_reg)
+export(.linfa_naive_Bayes)
+export(.linfa_svm_linear)
 export(predict)
 import(rlang)
 importFrom(stats,predict)
