--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,4 @@ Config/rextendr/version: 0.3.1.9000
 URL: https://github.com/simonpcouch/rinfa
 BugReports: https://github.com/simonpcouch/rinfa/issues
 SystemRequirements: Cargo (Rust's package manager), rustc
+Config/Needs/website: rmarkdown, ggplot2
