--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(.linfa_multinom_reg)
 export(.linfa_naive_Bayes)
 export(.linfa_svm_linear)
 export(predict)
+import(parsnip)
 import(rlang)
 importFrom(stats,predict)
 useDynLib(rinfa, .registration = TRUE)
