--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/rextendr/version: 0.3.1.9000
-URL: https://github.com/simonpcouch/rinfa
+URL: https://github.com/simonpcouch/rinfa, https://simonpcouch.github.io/rinfa/
 BugReports: https://github.com/simonpcouch/rinfa/issues
 SystemRequirements: Cargo (Rust's package manager), rustc
 Config/Needs/website: rmarkdown, ggplot2
