input matrix directly to rust
previous interface had required a reshape and transpose, but turns out extendr can take matrices (as read-only) directly. cuts down on fit time quite a bit.

just specs out the approach for fitting a linear regression, but can apply to other implementations now.

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -9,7 +9,7 @@ name = 'rinfa'
 
 [dependencies]
 # lots of changes since 0.4.0
-extendr-api = { git = "https://github.com/extendr/extendr" }
+extendr-api = { git = "https://github.com/extendr/extendr", features = ["ndarray"] }
 linfa = '*'
 linfa-bayes = "0.7.0"
 linfa-linear = "0.7.0"
